--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
     <string name="description2">AutoDoCP是一个自动化下单的程序,自动操作,自动脚本,自动...你想要的都可以</string>
 
+    <string name="description3">jiakao</string>
 
+    <string name="description4">冲顶大会</string>
     <string name="app_fun2">支付测试程序</string>
 </resources>
