--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="description3">jiakao</string>
 
     <string name="description4">冲顶大会</string>
+
+    <string name="description5">企业微信打下班卡程序</string>
     <string name="app_fun2">支付测试程序</string>
 </resources>
